@@ -17,8 +17,10 @@
 #include <string.h>
 
 #include <openssl/bn.h>
-#include <openssl/ec.h>
 #include <openssl/objects.h>
+#ifdef OPENSSL_HAS_NISTP256
+# include <openssl/ec.h>
+#endif
 
 #include "../test_helper/test_helper.h"
 #include "ssherr.h"
