@@ -17,9 +17,11 @@
 #include <string.h>
 
 #include <openssl/bn.h>
-#include <openssl/ec.h>
 #include <openssl/rsa.h>
 #include <openssl/dsa.h>
+#ifdef OPENSSL_HAS_NISTP256
+# include <openssl/ec.h>
+#endif
 
 #include "../test_helper/test_helper.h"
 
